# cycle-trip-planner

./: .env.example  .gitignore  Dockerfile  README.md  backend.sh  dev.sh  docker-compose.yml  frontend.sh  pyproject.toml  requirements.txt  streamlit_app.py
.githooks/: pre-commit
notebook/: experiments.ipynb
src/: __init__.py
src/agent/: __init__.py  orchestration_loop.py  planning.py  runtime.py  v1_orchestrator.py
src/agent/orchestration/: loop.py  types.py
src/agent/planning/: builder.py  formatter.py
src/agent/prompts/: __init__.py  loader.py  system.md
src/api/: app.py  gpx.py  models.py
src/api/v1/: gpx.py  (+5 more)
src/config/: settings.py
src/exception/: __init__.py  errors.py  handlers.py
src/logger/: logging.py
src/notebook/: experiments.ipynb
src/scripts/: backend.sh  dev.sh  frontend.sh
src/state/: __init__.py  base.py  memory.py
src/tests/: conftest.py  test_chat_flow.py  test_config_and_factory.py  test_conversation_continuity.py  test_golden_deterministic_plan.py  test_gpx_export.py  test_live_llm_smoke.py  test_optional_tools.py  test_orchestration_loop.py  test_rate_limit.py  test_redaction.py  test_request_id.py  test_state_memory.py  test_tools_accommodation.py  test_tools_elevation.py  test_tools_route.py  test_tools_weather.py  test_v0_tools.py  test_v1_chat_http.py
src/tools/: __init__.py  builtins.py  check_visa_requirements.py  estimate_budget.py  find_accommodation.py  get_elevation_profile.py  get_points_of_interest.py  get_route.py  get_weather.py  names.py  registry.py
src/ui/: __init__.py  chat.py  sidebar.py  state.py
(+20 files in other folders)
