[project]
name = "cycling-trip-planner-agent"
version = "0.1.0"
description = "A conversational cycling trip planner agent (FastAPI + Anthropic Claude tool-use)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.97.0",
    "fastapi~=0.136.0",
    "httpx~=0.28.0",
    "pydantic~=2.13.0",
    "pydantic-settings~=2.14.0",
    "python-dotenv~=1.2.0",
    "requests~=2.33.0",
    "streamlit~=1.56.0",
    "uvicorn~=0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-q"
markers = [
    "live: integration tests that hit the live Anthropic API (skipped unless RUN_LIVE_LLM=1 and ANTHROPIC_API_KEY is set)",
]
